# Datos_Sockets_3

./: CMakeLists.txt  Conexiones.txt  Dijkstra.txt  Lugares.txt  Serverprueba.cpp  arbolcategorias.cpp  arbolexpansion.cpp  arbolexpansion.h  arbolproductos.cpp  arbolproductos.h  arbolproveedores.cpp  arbolsupermercados.cpp  listaconexiones.cpp  listaconexiones.h  listaconjunto.cpp  listaconjunto.h  listalugares.cpp  listalugares.h  main.cpp  mainProveedor.cpp  nodo.cpp  nodo.h  nodoarbolexpansion.cpp  nodoarbolexpansion.h  nodoconexion.cpp  nodoconexion.h  nodoconjunto.cpp  nodoconjunto.h  nodolugar.cpp  nodolugar.h  nodosupermercado.h  pila.cpp  pila.h
cliente_1/: Prueba.pro  dialogclientenuevo.cpp  dialogclientenuevo.h  dialogcompra.cpp  dialogcompra.h  dialogcompra.ui  dialogcompra.ui.autosave  dialogconsulta.cpp  dialogconsulta.h  dialogconsulta.ui  dialogconsulta.ui.autosave  dialogelimprod.cpp  dialogelimprod.h  dialogelimprod.ui  dialoggrafos.cpp  dialoggrafos.h  dialoggrafos.ui  dialoggrafos.ui.autosave  dialogimparboles.cpp  dialogimparboles.h  dialogimparboles.ui  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  socketclient.cpp  socketclient.h  widgetprofundidad.cpp  widgetprofundidad.h  widgetprofundidad.h.autosave  widgetprofundidad.ui
cliente_2/: Prueba.pro  dialogclientenuevo.ui  dialogcompra.h  dialogcompra.ui  dialogconsulta.h  dialogconsulta.ui  dialogelimprod.h  dialogelimprod.ui  dialoggrafos.h  dialogimparboles.cpp  dialogimparboles.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  socketclient.cpp  (+4 more)
(+2 files in other folders)
